tests/ui/diagnostic_namespace/on_type_error/on-type-error-lifetime-generic.stderr
error[E0308]: mismatched types
  --> $DIR/on-type-error-lifetime-generic.rs:14:27
   |
LL |     let _: Ref<'_, i32> = other;
   |            ------------   ^^^^^ expected `Ref<'_, i32>`, found `OtherRef<'_, i32>`
   |            |
   |            expected due to this
   |
   = note: custom on_type_error note: expected `Ref<'_, i32>`, found `OtherRef<'_, i32>`
   = note: expected struct `Ref<'_, i32>`
              found struct `OtherRef<'_, i32>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
